# Final-Year-Project

./: .gitignore  README
COMBINED-Examples/ImageToVTKImageFilter/: ImageToVTKImageFilter
COMBINED-Examples/nifti-vtk-master/: CMakeLists.txt  RenderWindowUI.cxx  RenderWindowUI.h  RenderWindowUI.ui  RenderWindowUIDriver.cxx  main.cxx  myVtkInteractorStyleImage.cxx  myVtkInteractorStyleImage.h  nifti-vtk
COMBINED-Examples/nifti-vtk-master/SliceInteractor/: CMakeLists.txt  StatusMessage.cxx  StatusMessage.h  VtkSliceInteractorStyle.cxx  VtkSliceInteractorStyle.h  myVtkInteractorStyleImage.cxx  myVtkInteractorStyleImage.h
Data/: Brain.vtk  Uncertainty-Surface-Eroded.vtk
Evaluation/: Combined-Gradient.xcf  Combined-Split.xcf
Final-Report/: Evaluation Notes  abstract.aux  abstract.tex  acknowledgements.aux  acknowledgements.tex  background.aux  background.tex  bibliography.bib  body.aux  body.tex  conclusion.aux  conclusion.tex  contents.aux  contents.tex  custom.tfm  evaluation.aux  evaluation.tex  future.tex  gummi.gummi  implementation.tex  introduction.aux  introduction.tex  main.aux  main.bbl  main.blg  main.out  main.tex  main.toc  method.tex  results.tex  title.tex  user_feedback.ods
Final-Report/images/: labels.xcf  super_resolution.xcf  thresholdvariation1.m  thresholdvariation1fix.m  thresholdvariation2.m
Final-Report/images/erosion/: growing_example.ods
Final-Report/images/reconstruction/: v1.xcf  v2.xcf
Final-Report/images/surface/: .~lock.sampling_example.ods#  sampling_example.ods  sampling_example.xcf  spherical_1.xcf  texture_sphere.xcf  tortoise_and_hare.xcf
Final-Report/images/thresholding/: thresholdvariation1.m  thresholdvariation1example.ods  thresholdvariation1fix.m  thresholdvariation2.m
Final-Report/images/tool/: mitk.xcf
ITK-Examples/WidthHeight/: CMakeLists.txt  WidthHeight
ImageToVTKImageFilter/: CMakeLists.txt  ImageToVTKImageFilter.cxx
Interim-Report/: bibliography.bib  main.tex
Interim-Report/images/: error bars.xcf  flicker.xcf
ItkVtkGlue/: ItkVtkGlueConfig.cmake  UseItkVtkGlue.cmake
MITKPluginGenerator-1.4.0-Linux/: MITKPluginGenerator
Matlab/: Analyze_Example.m
Matlab/mri_toolbox_v1.5/: AnalyzeMovie.m  RotateImage.m  avw2brainstorm.m  avw_converter_script.m  avw_flip.m  avw_hdr_make.m  avw_hdr_read.m  avw_hdr_write.m  avw_img_compose.m  avw_img_read.m  avw_img_write.m  avw_metric.m  avw_view.m  avw_view3.m  avw_view_hdr.m  avw_view_old.m  avw_view_v5.m  cor_img_read.m  emse_elec2mri.m  emse_mri2elec.m  emse_open_reg.m  freesurfer_crs2xyz.m  freesurfer_xyz2crs.m  mriphantom.m  siemens_ima_read.m
Matlab/mri_toolbox_v1.5/doc/: AnalyzeDirectOrientSupport.txt  CAMBRIDGE IMAGERS - Analyze data format.htm  MRI Orientation Notes.html  Medical Image Format FAQ - Part 4.htm  SPM image file format.htm  XMedCon - Orientation.htm  spm2_format_changes.txt
Project Evaluation/: Combined.xcf  Single.xcf
Sams_Project/: CMakeLists.txt
Sams_Project/CMake/: CPackSetup.cmake
Sams_Project/Plugins/: Plugins.cmake
VTK-Examples/CornerAnnotation/: CMakeCache.txt  CMakeLists.txt  CornerAnnotation  Makefile  cmake_install.cmake
VTK-Examples/DistancePointToLine/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
VTK-Examples/HAVSVolumeMapper/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
VTK-Examples/Interpolation/: CMakeLists.txt  Interpolation
VTK-Examples/MinIntensityRendering/: CMakeCache.txt  Makefile  cmake_install.cmake
VTK-Examples/ReadDICOMSeries/: ReadDICOMSeries
VTK-Examples/RenderWindowNoUiFile/: CMakeLists.txt  RenderWindowNoUiFile
VTK-Examples/RenderWindowUIMultipleInheritance/: CMakeLists.txt
VTK-Examples/SideBySideRenderWindowsQt/: SideBySideRenderWindowsQt  SideBySideRenderWindowsQt.cxx
VTK-Examples/SmartVolumeMapper/: CMakeLists.txt
VTK-Examples/TriangulateTerrainMap/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
ctk-command-line-modules/template/: template_command_line_module.cpp
(+76 files in other folders)
