cmake_minimum_required(VERSION 2.8)
 
project(nifti-vtk)
 
FIND_PACKAGE(ITK REQUIRED)
INCLUDE(${ITK_USE_FILE})
IF (ITKVtkGlue_LOADED)
  FIND_PACKAGE(VTK REQUIRED)
  INCLUDE(${VTK_USE_FILE})
ELSE()
  FIND_PACKAGE(ItkVtkGlue REQUIRED)
  INCLUDE(${ItkVtkGlue_USE_FILE})
  SET(Glue ItkVtkGlue)
ENDIF()

ADD_LIBRARY(MY_VTK_INTERACTOR_STYLE_IMAGE myVtkInteractorStyleImage.cxx)
TARGET_LINK_LIBRARIES (MY_VTK_INTERACTOR_STYLE_IMAGE PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
ADD_EXECUTABLE(nifti-vtk main.cxx)
TARGET_LINK_LIBRARIES(nifti-vtk
  ${Glue} ${VTK_LIBRARIES} ${ITK_LIBRARIES} $(MY_VTK_INTERACTOR_STYLE_IMAGE))

SET(CMAKE_CXX_FLAGS_RELEASE "-Wall -O2")
SET(CMAKE_CXX_FLAGS_DEBUG  "-Wall -O0 -g")
